# debugging-pico

./: 99-picoprobe.rules  README.md  launch.json  picoprobe.uf2
debugNative/: CMakeLists.txt  main.c
debugPi/: CMakeLists.txt  main.c
